--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,5 @@
-# This is a basic workflow to help you get started with Actions
+name: Angular-CI
 
-name: CI
-
-# Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
@@ -10,37 +7,38 @@ on:
   pull_request:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+permissions: write-all
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-       name: CheckOut
-       uses: actions/checkout@v4
+      - name: CheckOut
+        uses: actions/checkout@v4
 
+      # Configuracion Node.js
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.2
         with:
-          node-verision "20.14.0"
+          node-version: "20.14.0"
 
-      - name: Instalar dependencias
-        run: npm i 
+      # Instalación de dependencias
+      - name: Instala dependencias
+        run:  npm i
 
-      - name: Build Proyecto
-        run: npm run buid.prod
+      # Despliegue de la aplicación
+      - name: Build
+        run:  npm run build:prod
 
+        # Deploy GitHub Pages
       - name: GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v4.0.0
+        uses: crazy-max/ghaction-github-pages@v4.0.2
         with:
-           build_dir: dist/[Entornos-Virtuales]/browser
-            target_branch: orgg-pages
+          build_dir: dist/[nombre_repositorio]/browser
+          target_branch: gh-pages
         env:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
