--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -38,7 +38,7 @@ jobs:
       - name: GitHub Pages
         uses: crazy-max/ghaction-github-pages@v4.0.2
         with:
-          build_dir: dist/[nombre_repositorio]/browser
+          build_dir: dist/Entornos-Virtuales/browser
           target_branch: gh-pages
         env:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
